fixed scrollbar issue

--- a/frontend/src/Styles/dashboard.module.css
+++ b/frontend/src/Styles/dashboard.module.css
@@ -1,3 +1,4 @@
+
 .container{
     display: flex;
     position: absolute;
@@ -5,6 +6,11 @@
     left:0;
     right:0;
     bottom:0;
+    overflow-y: scroll;
+}
+
+.container::-webkit-scrollbar{
+   display: none;
 }
 
 .bodyContainer{
@@ -51,8 +57,8 @@
     justify-content: center;
     height: 100vh;
     width:50%;
-    border-right: 1px solid #444444;
-    border-left: 1px solid #444444;
+    /* border-right: 1px solid #444444;
+    border-left: 1px solid #444444; */
 }
 
 .addContainer{
@@ -94,6 +100,18 @@
     margin-top: 20px;
     padding-left: 10px;
 }
+
+.modalContainer{
+    width: 40%;
+    height: 70%;
+    margin-left: 30%;
+    margin-top:10%;
+    /* margin-right: 50%; */
+    background-color: olivedrab;
+    min-height: 400px;
+    min-width: 300px;
+}
+
 
 .featuredContainer{
     height: 100vh;
